@@ -56,6 +56,9 @@ CVS code -
 - rcfile.c:
   parse_argument()
 	- Rename variable ptr_bak to ptr_save, for consistency. (DLR)
+  parse_syntax()
+	- Properly generate an error if we've read in a previous syntax
+	  without any associated color commands. (DLR)
   parse_colors()
 	- Check for a color command's not following a syntax line before
 	  anything else. (DLR)
